🐝 fix: must provide width/height for the button to be visible on safari

--- a/src/components/BackButton/style.styl
+++ b/src/components/BackButton/style.styl
@@ -1,8 +1,9 @@
 .back-button button, .back-button a
+    $size = 3rem
     padding 0
     margin 0
-    width 100%
-    height 100%
+    width $size
+    height $size
     background embedurl('../../assets/icons/icon-arrow-left.svg') center no-repeat
     display block
 
